references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/Redefinition_OwningType_Invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:b675a6d078f4080ac256e51a2d22013f6f21c1cc2a1404a3380b53d9279228d6
size 1592
